# BaseVar2

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v2.4.1.md  RELEASE_NOTES_v2.5.1.md  work.log.sh
.github/workflows/: build.yml
.qoder/repowiki/en/content/: Build System and Configuration.md  Developer Guide.md  Getting Started.md  Pipeline Generation and Automation.md  Testing and Validation.md
.qoder/repowiki/en/content/Command-Line Interface Reference/: Caller Command.md  Command-Line Interface Reference.md  Concat Command.md  Motif Command.md  Subsam Command.md
.qoder/repowiki/en/content/Core Algorithm Architecture/: Core Algorithm Architecture.md  Likelihood Ratio Testing Framework.md  Statistical Models and Probability Calculations.md
.qoder/repowiki/en/content/File Format I_O System/: BAM_CRAM Alignment Processing.md  FASTA Reference Genome Handling.md  File Format I_O System.md
.qoder/repowiki/en/content/Project Overview/: Introduction and Purpose.md  Project Overview.md
.qoder/repowiki/en/content/Variant Calling Engine/: Batch Processing System.md  Quality Control and Filtering.md  Statistical Analysis Core.md  Variant Calling Engine.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
conda/: README.md
conda/basevar/: build.sh  meta.yaml
docs/: INSTALL_FROM_SOURCE.md
docs/repowiki/en/content/: Developer Guide.md  Getting Started.md  Parallel Processing Framework.md  Pipeline Generation and Automation.md  Population Genetics Analysis.md  Utility Functions and Helpers.md  VCF Processing Tools.md
docs/repowiki/en/content/Command-Line Interface Reference/: Command-Line Interface Reference.md
docs/repowiki/en/content/Core Algorithm Architecture/: Core Algorithm Architecture.md  Expectation-Maximization Algorithm.md  Mathematical Foundations and Background.md  Statistical Models and Probability Calculations.md
docs/repowiki/en/content/File Format I_O System/: BGZF Compression and Streaming.md  VCF Output Generation.md
docs/repowiki/en/content/Project Overview/: Citation and Publication Information.md  Mathematical Foundations and Theory.md  Performance Characteristics and Advantages.md  Project Overview.md
docs/repowiki/en/content/Variant Calling Engine/: Parallel Execution Framework.md  Pipeline Orchestration.md
docs/repowiki/en/meta/: repowiki-metadata.json
handoff/: HANDOFF_motif_counter_method.md
scripts/: create_pipeline.py  example.sh
src/: algorithm.cpp  algorithm.h  bam.cpp  bam.h  bam_header.cpp  bam_header.h  bam_record.cpp  bam_record.h  basetype.cpp  basetype.h  basetype_caller.cpp  basetype_caller.h  basetype_utils.cpp  basetype_utils.h  basevar.cpp  caller_utils.cpp  caller_utils.h  concat.cpp  concat.h  dump.cpp  dump.h  fasta.cpp  fasta.h  fetal_fraction.cpp  fetal_fraction.h  fprofile_data.h  iobgzf.cpp  iobgzf.h  main.cpp  motif_counter.cpp  motif_counter.h  pipeline.cpp  pipeline.h  threadpool.h  utils.cpp  utils.h  variant_caller.cpp  variant_caller.h  vcf_subset_samples.cpp  vcf_subset_samples.h  (+2 more)
src/io/: bam_record.cpp  bam_record.h  batchfile_binary.cpp  batchfile_binary.h  bgzf_concat.h  iobgzf.h  tabix_utils.h  utils.cpp  utils.h  vcf_record.cpp  vcf_record.h
src/trash/: variant_caller.cpp  variant_caller.h
tests/: test_block_merge.py  work.log.sh
tests/data/: work.log.sh
tests/data/synthetic/: README.md  ancient_dna.py  auxiliary.py  config.py  evaluate.py  generate.py  ground_truth_variants.tsv  reads_simulator.py  reference.py  run_tests.sh  samples.list  samples_group.info  test_ancient_dna.py  test_paired_end.py  writer.py
tests/data/synthetic/bam/: sampleA01.bam  sampleA01.bam.bai  sampleA02.bam  sampleA02.bam.bai  sampleA03.bam  sampleA03.bam.bai  sampleA04.bam  sampleA04.bam.bai  sampleA05.bam  sampleA05.bam.bai  sampleA06.bam  sampleA06.bam.bai  sampleA07.bam  sampleA07.bam.bai  sampleA08.bam  sampleA08.bam.bai  sampleA09.bam  sampleA09.bam.bai  sampleA10.bam  sampleA10.bam.bai  sampleA11.bam  sampleA11.bam.bai  sampleA12.bam  sampleA12.bam.bai  sampleA13.bam  sampleA13.bam.bai  sampleA14.bam  sampleA14.bam.bai  sampleA15.bam  sampleA15.bam.bai  sampleA16.bam  sampleA16.bam.bai  sampleA17.bam  sampleA17.bam.bai  sampleA18.bam  sampleA18.bam.bai  sampleA19.bam  sampleA19.bam.bai  sampleA20.bam  sampleA20.bam.bai  (+60 more)
tests/data/synthetic/cram/: sampleA01.cram  sampleA01.cram.crai  sampleA02.cram  sampleA02.cram.crai  sampleA03.cram  sampleA03.cram.crai  sampleA04.cram  sampleA04.cram.crai  sampleA05.cram  sampleA05.cram.crai  sampleA06.cram  sampleA06.cram.crai  sampleA07.cram  sampleA07.cram.crai  sampleA08.cram  sampleA08.cram.crai  sampleA09.cram  sampleA09.cram.crai  sampleA10.cram  sampleA10.cram.crai  sampleA11.cram  sampleA11.cram.crai  sampleA12.cram  sampleA12.cram.crai  sampleA13.cram  sampleA13.cram.crai  sampleA14.cram  sampleA14.cram.crai  sampleA15.cram  sampleA15.cram.crai  sampleA16.cram  sampleA16.cram.crai  sampleA17.cram  sampleA17.cram.crai  sampleA18.cram  sampleA18.cram.crai  sampleA19.cram  sampleA19.cram.crai  sampleA20.cram  sampleA20.cram.crai  (+60 more)
tests/data/synthetic/ref/: example_microbe.fa  example_microbe.fa.fai  mini_ref.fa  mini_ref.fa.fai
tests/io/: Makefile  make.sh  test_algorithm.cpp  test_bam.cpp  test_bamheader.cpp  test_bamrecord.cpp  test_batchfile_binary.cpp  test_bayesian_caller.cpp  test_bgzf_utils.cpp  test_combinations.cpp  test_fasta.cpp  test_fetal_fraction.bed  test_fetal_fraction.cpp  test_hwe_correction.cpp  test_motif_counter.cpp  test_pipeline.cpp  test_threadpool.cpp  test_utils.cpp
updatelog/: RELEASE_NOTES_v2.3.1.md  RELEASE_NOTES_v2.4.0.md  RELEASE_NOTES_v2.5.0.md  RELEASE_NOTES_v2.5.1.md  RELEASE_NOTES_v2.5.2.md  RELEASE_NOTES_v2.5.3.md  RELEASE_NOTES_v2.6.0.md  RELEASE_NOTES_v2.6.1.md  RELEASE_NOTES_v2.6.2.md  RELEASE_NOTES_v2.6.3.md  RELEASE_NOTES_v2.6.4.md  RELEASE_NOTES_v2.6.5.md
